# namecheap-ddns-updater

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
src/: main.rs
